refactor: 优化断线重连